--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,13 @@
 
+jax==0.3.13
+jaxlib==0.3.10
+jupyterlab==3.4.5
+matplotlib==3.6.3
+numpy==1.23.2
+pandas==1.5.3
+scikit-learn==1.2.1
+scipy==1.9.1
+tqdm==4.64.1
 sphinx>=4.5.0
 numpydoc==1.4
 pydata-sphinx-theme==0.9.0
